<resources>
    <string name="app_name">Damn Vulnerable Mobile App</string>
    <string name="nav_home">Home</string>
    <string name="nav_vulnerabilities">Vulnerabilities</string>
    <string name="nav_guides">Guides</string>
    <string name="nav_settings">Settings</string>
    <string name="txt_home_title">Home</string>
    <string name="txt_home_body">Damn Vulnerable Mobile App (DVMA) is an intentionally insecure Android app. This app aims to educate developers about common vulnerabilities found in Android apps. This project will contain many vulnerabilities from categories as identified in the OWASP Top 10. This app aims to stay up to date with current Android features while maintaining a modern design. For each vulnerability there will be a guide explaining the vulnerability in more detail, along with ways to correct or avoid these common pitfalls. There will also be several videos alongside the written guides covering numerous vulnerabilities.</string>
    <string name="txt_vulnerabilities_title">Vulnerabilities</string>
    <string name="txt_vulnerabilities_logging_title">Insecure Data Logging</string>
    <string name="txt_vulnerabilities_storage_title">Insecure Data Storage</string>
    <string name="txt_vulnerabilities_authentication_title">Insecure Authentication</string>
    <string name="txt_vulnerabilities_broadcast_title">Insecure Broadcast</string>
    <string name="txt_vulnerabilities_activity_title">Insecure Activity</string>
    <string name="txt_guides_title">Guides</string>
    <string name="txt_guides_introduction">Introduction</string>
    <string name="txt_guides_vulnerability">Vulnerability</string>
    <string name="txt_guides_what">What this looks like</string>
    <string name="txt_guides_where">Where this can be found</string>
    <string name="txt_guides_mitigation">Mitigation</string>
    <string name="txt_guides_activity_title">Improper System Use - Activity</string>
    <string name="txt_guides_activity_introduction">
        An Activity (https://developer.android.com/reference/android/app/Activity) is a building block of an app. You can think of an Activity as often representing a single screen in an app. They are responsible for loading the UI, and contain all business logic for the current screen. Activities can be opened from other Activities using startActivity() (https://developer.android.com/reference/android/app/Activity#startActivity(android.content.Intent)) and passing in an Intent (https://developer.android.com/reference/android/content/Intent).
        <br><br></br></br>
        <b>Note:</b> Google has been pushing the single Activity, multiple Fragment way of creating apps for several years now with the introduction of Jetpack Navigation (https://developer.android.com/guide/navigation/). This will eventually lead to a reduction of apps based around the multiple Activity framework which will hopefully lead to less Activity vulnerabilities seen in the wild.
    </string>
    <string name="txt_guides_activity_vulnerability">
        In this app, there is a button which when pressed opens up a new Activity. For example, in a banking app there could be a home page, and then a button which will open up a screen for transferring money to other accounts.
        <br></br>
        The issue in this app is the call to open the Activity uses an Implicit Intent and the Activity to be opened has Intent Filters. This is a similar issue that is explored in the Broadcasts Guide (in this app). Because it uses an Implicit Intent, the Activity being opened needs Intent Filters to help the OS identify which Activity should be opened given an action. As soon as an Intent Filter is declared in the Manifest, the <b>android:exported</b> value is set to true, allowing outside applications to open the Activity.
    </string>
    <string name="txt_guides_storage_title">Insecure Data Storage</string>
    <string name="txt_guides_storage_introduction">
        In a recent review of mobile application security (https://www.ptsecurity.com/ww-en/analytics/mobile-application-security-threats-and-vulnerabilities-2019/), Insecure Data Storage was found to be the most common issue, found in 76% of apps. This is a huge number, and clearly shows that there is a lack of developer knowledge when it comes to storing information.
        <br></br>
        As stated in the documentation (https://developer.android.com/training/data-storage/), Android provides many ways to store data locally on the phone. The different options all have their purpose and it is important to use the correct type of storage for a given scenario. By default, Android provides no native way of encrypting data and this responsibility falls to you as the developer.
    </string>
    <string name="txt_guides_storage_vulnerability">
        In this app, when the user logs in their username and password are saved - unencrypted - in Internal and External Storage, SharedPreferences and an SQLite Database.
        <br><br></br></br>
        The first issue with this is the most obvious one - the data is stored completely unencrypted. Any PII should be encrypted independent of where the data is stored. As mentioned in this video (https://www.youtube.com/watch?v=W3mwSnF1n50), when you search for AES encryption in Android one of the first results on StackOverflow is this:
    </string>
    <string name="txt_guides_storage_vulnerability2">
        There are several issues with this answer. The answer itself is covered in warnings saying it is unsafe and not suitable to be used - but people will do so anyway. The answer uses now-deprecated functions and does not make use of "Android's" Keystore (https://developer.android.com/training/articles/keystore).
        <br><br></br></br>
        The second issue is where this data is stored. External Storage is an inappropriate storage method for storing app-specific sensitive information because it is globally readable by other apps.
        <br></br>
        As mentioned in the DataLogging Guide (in this app), while the other storage locations are not able to be read by other apps, if the physical device is obtained then it is easy to access all of these files.
    </string>
    <string name="txt_guides_storage_what">
        The code snippet for storing the data is included below. The key thing to note is the lack of encryption used.
        <br></br>
        fileOutputStream.write("username: $username\n".toByteArray())
        <br></br>
        fileOutputStream.write("password: $password\n".toByteArray())
    </string>
    <string name="txt_guides_storage_where">
        Insecure Data Storage can be found anywhere but will be particularly common in areas of the app that handle user information such as a log in screen, or a place where the user inputs data into a form.
    </string>
    <string name="txt_guides_storage_mitigation">
        Traditionally in Android, encryption falls to the developer to implement. However, Google realised that the lack of integrated solution was problematic and created a library - JetpackSecurity (https://developer.android.com/jetpack/androidx/releases/security) - to help developers implement secure encryption in their apps. In order to promote this library, Google released this video (https://www.youtube.com/watch?v=W3mwSnF1n50) as part of the launch, along with this video (https://www.youtube.com/watch?v=2y9Ol2N1I4k) as part of the Enterprise Dev Training series they run. They also released this (https://android-developers.googleblog.com/2020/02/data-encryption-on-android-with-jetpack.html) blog post showing developers how to use the library to encrypt data.
        <br><br></br></br>
        Jetpack Security provides key creation and verification along with two classes to help developers store their data securely.
        <br></br>
        The first thing I will talk about is the introduction of EncryptedSharedPreferences (https://developer.android.com/reference/androidx/security/crypto/EncryptedSharedPreferences). This is the encrypted form of the regular SharedPreferences you will be used to using. For more information on SharedPreferences visit the documentation (https://developer.android.com/training/data-storage/shared-preferences).
        <br></br>
        In order to use the EncryptedSharedPreferences, after ensuring you have added the correct gradle dependencies, you must first create a key.
        <br></br>
        This library gives many different options for creating keys such as requiring user authentication and setting a time window that the key is valid for. However, for most applications Google recommends the following:
        <br></br>
        mainKey = MasterKey.Builder(requireContext())
        <br></br>
            .setKeyScheme(MasterKey.KeyScheme.AES256_GCM)
        <br></br>
            .build()
        <br><br></br></br>
        Once a key has been created you can then create an instance of EncryptedSharedPreferences. This is like creating a SharedPreference instance, except the key and encryption scheme are passed in. For example:
        <br></br>
        val sharedPrefsFile = "encryptedUserProfileSP"
        <br></br>
        val sharedPrefs: SharedPreferences = EncryptedSharedPreferences.create(
        <br></br>
            requireContext(),
        <br></br>
            sharedPrefsFile,
        <br></br>
            mainKey,
        <br></br>
            EncryptedSharedPreferences.PrefKeyEncryptionScheme.AES256_SIV,
        <br></br>
            EncryptedSharedPreferences.PrefValueEncryptionScheme.AES256_GCM
        <br></br>
        )
        <br></br>
        with (sharedPrefs.edit()) {
        <br></br>
            putString("username", username)
        <br></br>
            putString("password", password)
        <br></br>
            apply()
        <br></br>
        }
        <br><br></br></br>
        Retrieving the values is very much the same as with SharedPreferences.
        <br><br></br></br>
        The other class that is included is EncryptedFile (https://developer.android.com/reference/androidx/security/crypto/EncryptedFile). Much like EncryptedSharedPreferences this is intended to be a drop-in replacement for usual file operations. The only change is passing in a key and encryption scheme. An example of writing to an encrypted file is below:
        <br></br>
        val myFile = File(requireContext().filesDir, "encryptedUserProfileFile.txt")
        <br></br>
        if (myFile.exists()) {
        <br></br>
            myFile.delete()
        <br></br>
        }
        <br></br>
        val myEncryptedFile = EncryptedFile.Builder(
        <br></br>
            requireContext(),
        <br></br>
            myFile,
        <br></br>
            mainKey,
        <br></br>
            EncryptedFile.FileEncryptionScheme.AES256_GCM_HKDF_4KB
        <br></br>
        ).build()
        <br><br></br></br>
        val fileContent = "$username,$password".toByteArray(StandardCharsets.UTF_8)
        <br></br>
        myEncryptedFile.openFileOutput().apply {
        <br></br>
            write(fileContent)
        <br></br>
            flush()
        <br></br>
            close()
        <br></br>
        }
        <br></br>
    </string>
    <string name="txt_guides_storage_secure">
        Secure Storage Example
    </string>
    <string name="btn_logging">Data Logging</string>
    <string name="btn_storage">Data Storage</string>
    <string name="btn_storage_secure">Secure Storage</string>
    <string name="btn_authentication">Authentication</string>
    <string name="btn_broadcast">Broadcast</string>
    <string name="btn_activity">Activity</string>
</resources>