<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_guides_storage_secure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="72dp"
            android:text="@string/btn_storage_secure"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_guides_storage_secure" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_guides_storage_secure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txt_guides_storage_secure"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_guides_storage_mitigation" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_guides_storage_mitigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:autoLink="web"
            android:text="@string/txt_guides_storage_mitigation"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_guides_mitigation_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_guides_mitigation_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txt_guides_mitigation"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_guides_storage_where" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_guides_storage_where"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autoLink="web"
            android:text="@string/txt_guides_storage_where"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_guides_where_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_guides_where_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txt_guides_where"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_guides_storage_what" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_guides_storage_what"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autoLink="web"
            android:text="@string/txt_guides_storage_what"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_guides_what_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_guides_what_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txt_guides_what"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_guides_storage_vulnerability2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_guides_storage_vulnerability2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autoLink="web"
            android:text="@string/txt_guides_storage_vulnerability2"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_stack_overflow" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_stack_overflow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@+id/txt_stack_overflow"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_guides_storage_vulnerability"
            app:srcCompat="@drawable/stack_overflow" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_guides_storage_vulnerability"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autoLink="web"
            android:text="@string/txt_guides_storage_vulnerability"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_guides_vulnerability_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_guides_vulnerability_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txt_guides_vulnerability"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_guides_storage_introduction" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_guides_storage_introduction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autoLink="web"
            android:text="@string/txt_guides_storage_introduction"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_guides_introduction_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_guides_introduction_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txt_guides_introduction"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_guides_storage_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_guides_storage_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txt_guides_storage_title"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>